compiler-core/main/__parse/parse/snapshots/gleam_core____parse__parse__tests__string_single_char_suggestion.snap
---
source: compiler-core/src_refactored/__parse/parse/tests.rs
assertion_line: 1035
expression: "\n    pub fn main() {\n        let a = 'example'\n      }\n    "
snapshot_kind: text
---
----- SOURCE CODE

    pub fn main() {
        let a = 'example'
      }
    

----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:3:17
  │
3 │         let a = 'example'
  │                 ^ Unexpected single quote

Hint: Strings are written with double quotes.
