compiler-core/main/__parse/parse/snapshots/gleam_core____parse__parse__tests__tuple_invalid_expr.snap
---
source: compiler-core/src_refactored/__parse/parse/tests.rs
assertion_line: 1101
expression: "\nfn main() {\n    #(1, 2, const)\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

fn main() {
    #(1, 2, const)
}


----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:3:13
  │
3 │     #(1, 2, const)
  │             ^^^^^ I was not expecting this

Found the keyword `const`, expected one of: 
- `)`
- an expression
