compiler-core/main/__parse/parse/snapshots/gleam_core____parse__parse__tests__type_angle_generics_definition_error.snap
---
source: compiler-core/src_refactored/__parse/parse/tests.rs
assertion_line: 1976
expression: "\ntype Either<a, b> {\n    This(a)\n    That(b)\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

type Either<a, b> {
    This(a)
    That(b)
}


----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:2:12
  │
2 │ type Either<a, b> {
  │            ^ I was expecting `(` here.

Type parameters use lowercase names and are surrounded by parentheses.

    type Either(a, b) {

See: https://tour.gleam.run/data-types/generic-custom-types/
