compiler-core/main/__parse/parse/snapshots/gleam_core____parse__parse__tests__type_angle_generics_usage_with_module_error.snap
---
source: compiler-core/src_refactored/__parse/parse/tests.rs
assertion_line: 1971
expression: "let set: set.Set<Int> = set.new()"
snapshot_kind: text
---
----- SOURCE CODE
let set: set.Set<Int> = set.new()

----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:1:17
  │
1 │ let set: set.Set<Int> = set.new()
  │                 ^ I was expecting `(` here.

Type parameters use lowercase names and are surrounded by parentheses.

    set.Set(Int)

See: https://tour.gleam.run/data-types/generic-custom-types/
