compiler-core/main/__parse/parse/snapshots/gleam_core____parse__parse__tests__type_angle_generics_usage_without_module_error.snap
---
source: compiler-core/src_refactored/__parse/parse/tests.rs
assertion_line: 1966
expression: "let list: List<Int, String> = []"
snapshot_kind: text
---
----- SOURCE CODE
let list: List<Int, String> = []

----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:1:15
  │
1 │ let list: List<Int, String> = []
  │               ^ I was expecting `(` here.

Type parameters use lowercase names and are surrounded by parentheses.

    List(Int, String)

See: https://tour.gleam.run/data-types/generic-custom-types/
